# vld

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  release.toml
.github/workflows/: ci.yml
benches/: validation_bench.rs
crates/vld-actix/: Cargo.toml  README.md
crates/vld-actix/examples/: actix_basic.rs
crates/vld-actix/src/: lib.rs
crates/vld-actix/tests/: integration.rs
crates/vld-aide/: Cargo.toml  README.md
crates/vld-aide/examples/: aide_basic.rs
crates/vld-aide/src/: lib.rs
crates/vld-aide/tests/: integration.rs
crates/vld-axum/: Cargo.toml  README.md
crates/vld-axum/examples/: axum_basic.rs  axum_openapi.rs
crates/vld-axum/src/: lib.rs
crates/vld-axum/tests/: integration.rs
crates/vld-clap/: Cargo.toml  README.md
crates/vld-clap/examples/: clap_basic.rs
crates/vld-clap/src/: lib.rs
crates/vld-clap/tests/: integration.rs
crates/vld-config/: Cargo.toml  README.md
crates/vld-config/examples/: config_basic.rs  figment_basic.rs
crates/vld-config/src/: lib.rs
crates/vld-config/tests/: integration.rs
crates/vld-derive/: Cargo.toml  README.md
crates/vld-derive/src/: lib.rs
crates/vld-diesel/: Cargo.toml  README.md
crates/vld-diesel/examples/: diesel_basic.rs
crates/vld-diesel/src/: lib.rs
crates/vld-diesel/tests/: integration.rs
crates/vld-dioxus/: Cargo.toml  README.md
crates/vld-dioxus/examples/: dioxus_basic.rs
crates/vld-dioxus/src/: lib.rs
crates/vld-dioxus/tests/: integration.rs
crates/vld-fake/: Cargo.toml  README.md
crates/vld-fake/examples/: fake_basic.rs
crates/vld-fake/src/: dict.rs  lib.rs
crates/vld-fake/tests/: integration.rs
crates/vld-http-common/: Cargo.toml  README.md
crates/vld-http-common/src/: lib.rs
crates/vld-http-common/tests/: integration.rs
crates/vld-lapin/: Cargo.toml  README.md
crates/vld-lapin/examples/: lapin_basic.rs
crates/vld-lapin/src/: lib.rs
crates/vld-lapin/tests/: integration.rs
crates/vld-leptos/: Cargo.toml  README.md
crates/vld-leptos/examples/: leptos_basic.rs
crates/vld-leptos/src/: lib.rs
crates/vld-leptos/tests/: integration.rs
crates/vld-ntex/: Cargo.toml  README.md
crates/vld-ntex/examples/: ntex_basic.rs
crates/vld-ntex/src/: lib.rs
crates/vld-ntex/tests/: integration.rs
crates/vld-poem/: Cargo.toml  README.md
crates/vld-poem/examples/: poem_basic.rs
crates/vld-poem/src/: lib.rs
crates/vld-poem/tests/: integration.rs
crates/vld-redis/: Cargo.toml  README.md
crates/vld-redis/examples/: redis_basic.rs
crates/vld-redis/src/: lib.rs
crates/vld-redis/tests/: integration.rs
crates/vld-rocket/: Cargo.toml  README.md
crates/vld-rocket/examples/: rocket_basic.rs
crates/vld-rocket/src/: lib.rs
crates/vld-rocket/tests/: integration.rs
crates/vld-salvo/: Cargo.toml  README.md
crates/vld-salvo/examples/: salvo_basic.rs
crates/vld-salvo/src/: lib.rs
crates/vld-salvo/tests/: integration.rs
crates/vld-schemars/: Cargo.toml  README.md
crates/vld-schemars/examples/: schemars_basic.rs
crates/vld-schemars/src/: lib.rs  validator.rs
crates/vld-schemars/tests/: integration.rs
crates/vld-sea/: Cargo.toml  README.md
crates/vld-sea/examples/: sea_basic.rs
crates/vld-sea/src/: lib.rs
crates/vld-sea/tests/: integration.rs
crates/vld-sqlx/: Cargo.toml  README.md
crates/vld-sqlx/examples/: sqlx_basic.rs
crates/vld-sqlx/src/: lib.rs
crates/vld-sqlx/tests/: integration.rs
crates/vld-surrealdb/: Cargo.toml  README.md
crates/vld-surrealdb/examples/: surrealdb_basic.rs
crates/vld-surrealdb/src/: lib.rs
crates/vld-surrealdb/tests/: integration.rs
crates/vld-tauri/: Cargo.toml  README.md
crates/vld-tauri/src/: lib.rs
crates/vld-tauri/tests/: integration.rs
crates/vld-tonic/: Cargo.toml  README.md
crates/vld-tonic/examples/: tonic_basic.rs
crates/vld-tonic/src/: lib.rs
crates/vld-tonic/tests/: integration.rs
crates/vld-tower/: Cargo.toml  README.md
crates/vld-tower/examples/: tower_basic.rs
crates/vld-tower/src/: lib.rs
crates/vld-tower/tests/: integration.rs
crates/vld-ts/: Cargo.toml  README.md
crates/vld-ts/examples/: generate_zod.rs
crates/vld-ts/src/: lib.rs
crates/vld-ts/tests/: codegen.rs
crates/vld-utoipa/: Cargo.toml  README.md
crates/vld-utoipa/examples/: utoipa_basic.rs
crates/vld-utoipa/src/: lib.rs
crates/vld-utoipa/tests/: integration.rs
crates/vld-warp/: Cargo.toml  README.md
crates/vld-warp/examples/: warp_basic.rs
crates/vld-warp/src/: lib.rs
crates/vld-warp/tests/: integration.rs
examples/: user.json  user_corrected.json  user_invalid.json
examples/playground/: Cargo.toml  release.toml
examples/playground/src/: main.rs
scripts/: ci-all.sh  release-changelog.sh  release-hook.sh  release-preflight.sh
src/: diff.rs  error.rs  format.rs  i18n.rs  input.rs  json_schema.rs  lib.rs  macros.rs  object.rs  schema.rs
src/collections/: array.rs  map.rs  mod.rs  record.rs  set.rs  tuple.rs
src/combinators/: catch_val.rs  custom.rs  describe.rs  discriminated_union.rs  intersection.rs  lazy_schema.rs  message.rs  mod.rs  pipe.rs  preprocess.rs  refine.rs  super_refine.rs  transform.rs  union.rs
src/modifiers/: default_val.rs  mod.rs  nullable.rs  nullish.rs  optional.rs
src/primitives/: any.rs  boolean.rs  bytes.rs  date.rs  decimal.rs  duration.rs  enumeration.rs  file.rs  ip_network.rs  json_value.rs  literal.rs  mod.rs  number.rs  path.rs  socket_addr.rs  string.rs
src/primitives/date/: jiff.rs  mod.rs  time.rs
tests/: chrono_dates.rs  collections.rs  combinators.rs  custom_messages.rs  custom_schema.rs  derive_validate.rs  describe.rs  discriminated_union.rs  dx_improvements.rs  error_format.rs  error_messages.rs  intersection.rs  jiff_dates.rs  json_schema.rs  lazy.rs  map_set.rs  modifiers.rs  no_default_features.rs  number_safe.rs  object.rs  object_extra.rs  object_modes.rs  or_and.rs  parse_lenient.rs  primitives.rs  proptest_fuzz.rs  rename.rs  schema_macro.rs  string_formats_extra.rs  super_refine.rs  time_dates.rs  validate_rust.rs
