[workspace]
members = [
    ".",
    "crates/vld-derive",
    "crates/vld-axum",
    "crates/vld-actix",
    "crates/vld-ts",
    "crates/vld-diesel",
    "crates/vld-utoipa",
    "crates/vld-config",
    "crates/vld-tower",
    "crates/vld-rocket",
    "crates/vld-poem",
    "crates/vld-warp",
    "crates/vld-sea",
    "crates/vld-clap",
    "crates/vld-salvo",
    "crates/vld-tauri",
    "crates/vld-fake",
    "crates/vld-http-common",
    "crates/vld-tonic",
    "crates/vld-leptos",
    "crates/vld-sqlx",
    "crates/vld-dioxus",
    "crates/vld-ntex",
    "crates/vld-aide",
    "crates/vld-surrealdb",
    "crates/vld-schemars",
    "crates/vld-redis",
    "crates/vld-lapin",
    "examples/playground",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
repository = "https://github.com/s00d/vld"
homepage = "https://github.com/s00d/vld"

[workspace.dependencies]
# Internal crates
vld = { path = ".", version = "0.3.0" }
vld-derive = { path = "crates/vld-derive", version = "0.3.0" }
vld-http-common = { path = "crates/vld-http-common", version = "0.3.0" }

# Shared external
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package]
name = "vld"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Type-safe runtime validation library for Rust, inspired by Zod"
documentation = "https://docs.rs/vld"
readme = "README.md"
keywords = ["validation", "schema", "json", "zod", "parsing"]
categories = ["parsing", "web-programming"]
exclude = [
    ".idea/",
    ".github/",
    "tests/",
    "benches/",
    "examples/playground/",
    "examples/user_saved.json",
    "examples/user_corrected.json",
    "crates/",
]

[features]
default = ["std"]
std = []
regex = ["dep:regex-lite"]
derive = ["dep:vld-derive"]
serialize = []
deserialize = []
openapi = []
diff = []
chrono = ["dep:chrono"]
decimal = ["dep:rust_decimal"]
net = ["dep:ipnet"]
file = ["std", "dep:infer"]
file-advanced = ["file", "dep:sha2", "dep:md-5", "dep:image", "dep:kamadak-exif"]
string-advanced = ["dep:semver", "dep:url", "dep:uuid", "dep:phonenumber"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex-lite = { version = "0.1", optional = true }
chrono = { version = "0.4", optional = true, default-features = false, features = ["std", "clock"] }
vld-derive = { workspace = true, optional = true }
infer = { version = "0.19.0", optional = true }
rust_decimal = { version = "=1.40.0", optional = true }
semver = { version = "=1.0.27", optional = true }
url = { version = "=2.5.8", optional = true }
uuid = { version = "=1.20.0", features = ["std", "v1", "v4", "v7"], optional = true }
sha2 = { version = "0.10.9", optional = true }
ipnet = { version = "=2.12.0", optional = true }
phonenumber = { version = "=0.3.7", optional = true }
image = { version = "=0.25.6", optional = true }
md-5 = { version = "=0.10.6", optional = true }
kamadak-exif = { version = "=0.6.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { workspace = true }
proptest = "1"

[[bench]]
name = "validation_bench"
harness = false
