[package]
name = "vld-aide"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "aide (schemars) integration for the vld validation library — auto-generate OpenAPI schemas for aide from vld definitions"
documentation = "https://docs.rs/vld-aide"
readme = "README.md"
keywords = ["validation", "aide", "openapi", "schemars", "vld"]
categories = ["web-programming", "development-tools"]
exclude = [".idea/", "tests/", "examples/"]

[features]
default = ["schemars-0"]
schemars-0 = ["dep:schemars0"]
schemars-1 = ["dep:schemars1"]

[dependencies]
vld = { workspace = true, features = ["openapi"] }
schemars0 = { package = "schemars", version = ">=0.9, <1", optional = true }
schemars1 = { package = "schemars", version = ">=1, <2", optional = true }
serde_json = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
vld = { workspace = true, features = ["openapi", "serialize", "derive"] }

[[example]]
name = "aide_basic"
path = "examples/aide_basic.rs"
