[package]
name = "vld-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Derive macro for the vld validation library"
documentation = "https://docs.rs/vld-derive"
readme = "README.md"
keywords = ["validation", "derive", "macro", "vld"]
categories = ["development-tools::procedural-macro-helpers"]
exclude = [".idea/"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
