[package]
name = "vld-diesel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Diesel integration for the vld validation library — validate before insert/update"
documentation = "https://docs.rs/vld-diesel"
readme = "README.md"
keywords = ["validation", "diesel", "orm", "database", "vld"]
categories = ["database", "web-programming"]
exclude = [".idea/", "tests/", "examples/"]

[features]
default = ["sqlite"]
postgres = ["diesel/postgres"]
mysql = ["diesel/mysql"]
sqlite = ["diesel/sqlite"]

[dependencies]
vld = { workspace = true, features = ["serialize"] }
diesel = { version = "2", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
diesel = { version = "2", features = ["sqlite"] }
vld = { workspace = true, features = ["serialize"] }

[[example]]
name = "diesel_basic"
path = "examples/diesel_basic.rs"
