[package]
name = "vld-fake"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Generate fake / test data from vld JSON Schemas"
documentation = "https://docs.rs/vld-fake"
readme = "README.md"
keywords = ["validation", "fake", "testing", "json-schema", "generator"]
categories = ["development-tools::testing", "parsing"]
exclude = [".idea/", "tests/"]

[dependencies]
vld = { workspace = true, features = ["openapi"] }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"

[dev-dependencies]
vld = { workspace = true, features = ["openapi", "serialize", "chrono"] }
