[package]
name = "vld-redis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Redis integration for the vld validation library — validate payloads before set/publish and after get/subscribe"
documentation = "https://docs.rs/vld-redis"
readme = "README.md"
keywords = ["validation", "redis", "pubsub", "json", "vld"]
categories = ["database", "web-programming"]
exclude = [".idea/", "tests/", "examples/"]

[features]
default = ["redis-0"]
redis-0 = ["dep:redis0"]
redis-1 = ["dep:redis1"]

[dependencies]
vld = { workspace = true, features = ["serialize"] }
serde = { workspace = true }
serde_json = { workspace = true }
redis0 = { package = "redis", version = ">=0.32, <1", optional = true }
redis1 = { package = "redis", version = ">=1, <2", optional = true }

[dev-dependencies]
vld = { workspace = true, features = ["serialize"] }

[[example]]
name = "redis_basic"
path = "examples/redis_basic.rs"
