[package]
name = "vld-sqlx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SQLx integration for the vld validation library — validate before insert/update, typed column wrappers"
documentation = "https://docs.rs/vld-sqlx"
readme = "README.md"
keywords = ["validation", "sqlx", "database", "sql", "vld"]
categories = ["database", "web-programming"]
exclude = [".idea/", "tests/", "examples/"]

[features]
default = ["sqlx-0_8", "sqlite"]
sqlx-0_8 = ["dep:sqlx08"]
sqlx-0_9 = ["dep:sqlx09"]
postgres = ["sqlx08?/postgres", "sqlx09?/postgres"]
mysql = ["sqlx08?/mysql", "sqlx09?/mysql"]
sqlite = ["sqlx08?/sqlite", "sqlx09?/sqlite"]

[dependencies]
vld = { workspace = true, features = ["serialize"] }
sqlx08 = { package = "sqlx", version = "0.8", default-features = false, optional = true }
sqlx09 = { package = "sqlx", version = "0.9", default-features = false, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
sqlx08 = { package = "sqlx", version = "0.8", features = ["sqlite", "runtime-tokio"] }
sqlx09 = { package = "sqlx", version = "0.9", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "sqlx_basic"
path = "examples/sqlx_basic.rs"
