[package]
name = "vld-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tauri IPC command validation for the vld validation library"
documentation = "https://docs.rs/vld-tauri"
readme = "README.md"
keywords = ["validation", "tauri", "ipc", "desktop", "json"]
categories = ["gui", "parsing"]
exclude = [".idea/", "tests/"]

[dependencies]
vld = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
vld = { workspace = true }
