[package]
name = "vld-ts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Generate TypeScript Zod schemas from vld JSON Schemas"
documentation = "https://docs.rs/vld-ts"
readme = "README.md"
keywords = ["validation", "typescript", "zod", "codegen", "json-schema"]
categories = ["development-tools", "web-programming"]
exclude = [".idea/", "tests/", "examples/"]

[dependencies]
serde_json = { workspace = true }

[[example]]
name = "generate_zod"
path = "examples/generate_zod.rs"
