[package]
name = "playground"
version = "0.0.0"
edition.workspace = true
publish = false

[features]
default = ["serialize", "deserialize", "openapi", "diff"]
serialize = ["vld/serialize"]
deserialize = ["vld/deserialize"]
openapi = ["vld/openapi"]
diff = ["vld/diff"]

[dependencies]
vld = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
